# geometry-tools

./: .gitignore  LICENSE  README.md
PCLTools/: CMakeLists.txt
PCLTools/include/: Primitives.h  Primitives.hpp
PCLTools/include/pcltools/: primitives.h  primitives.hpp  util.hpp
PCLTools/include/smartgeometry/: util.h  util.h~
PCLTools/src/: Primitives.cpp  util.cpp
PCLTools/src/geometry/: geometry.cpp
PCLTools/src/pcltools/: primitives.cpp
PCLTools/test/: main.cpp
PCLTools/test/data/: double_sofa.pcd
geometry/: CMakeLists.txt
geometry/include/geometry/: geometry.h  geometry.hpp
matlabWrapper/: CMakeLists.txt
matlabWrapper/include/matlab_wrapper/: Matlab.h
matlabWrapper/src/: Matlab.cpp  main.cpp
